2005-01-05 Douglas S. Blank  <dblank@brynmawr.edu>
	* src/Utils.py (roman): Proper implementation.

2005-01-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditSource.py: Patch to fix the list of References of a 
	Source, because currently the Source for a Person and Sources 
	of addresses are omitted.

2005-01-04 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgeHandler.py: Support for CODE for CLI mode.
	* src/Plugins.py: Use 'text' instead of 'doc'.
	* src/Report.py: Support for CODE reports.
	* src/ReportOptions.py: Paper-setting methods for runtime.
	* src/const.py.in: Label change.
	* src/plugins/GraphViz.py: Convert to new scheme.

2005-01-04  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Plugins.py: move non-gui functions to PluginMgr.py
	* src/PluginMgr.py: Non-gui functions for plugins
	* src/Makefile.am: Added PluginMgr.py
	* various: switch from Plugins to PluginMgr

2005-01-03  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsDbBase.py: move all thumbnail creation here to have
	a common thumbnail scheme.
	* src/GrampsInMemDB.py: remove thumbnail handling, use base class
	* src/DateHandler.py: Don't force English parser if problem with
	config value, but LANG is set properly

2005-01-02 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Report.py: Add support for a semi-common 'dispf'.
	* src/ReportOptions.py: Add support for a semi-common 'dispf'.
	* src/Utils.py (cm2pt): Add function.
	* src/plugins/AncestorChart.py: Convert to new scheme.
	* src/plugins/AncestorChart2.py: Convert to new scheme.
	* src/plugins/DesGraph.py: Convert to new scheme.

	* src/Report.py (report): Support for VIEW reports.
	* src/plugins/Summary.py: Convert to new scheme.
	* src/plugins/CountAncestors.py: Convert to new scheme.

	* src/plugins/RelGraph.py: Remove from CVS.
	* src/plugins/GraphViz.py: Minor fixes. Still not converted yet.
	* src/plugins/Makefile.am: Stop shipping RelGraph.py.
